--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -13,10 +13,8 @@
 
     @media (max-width: 645px) {
       flex-direction: column;
+      gap: 30px;
 
-      .header__cart {
-        margin-top: 30px;
-      }
     }
   }
 
