--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -241,6 +241,26 @@ body {
             display: none;
           }
         }
+        &--disabled {
+          opacity: 0.4;
+          border-color: #787878;
+          cursor: auto;
+
+          &:active {
+            transform: none;
+          }
+          &:hover {
+            background-color: transparent;
+
+            svg path {
+              fill: #787878;
+            }
+          }
+
+          svg path {
+            fill: #787878;
+          }
+        }
       }
 
       b {
