--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,6 +4,9 @@
   border-bottom: 1px solid $gray-line;
   padding: 40px 0;
 
+  @media (max-width: 900px) {
+    padding: 30px 0 0;
+  }
 
 
   .container {
