--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -471,6 +471,26 @@ body {
         right: 10px;
       }
     }
+
+    &--empty {
+      margin: 40px auto;
+      width: 240px;
+  
+      h2 {
+        font-size: 26px;
+      }
+      p {
+        font-size: 16px;
+      }
+  
+      img {
+        width: 150px;
+      }
+  
+      .button--black {
+        width: 200px;
+      }
+    }
   }
 
   @media (max-width: 510px) {
